<resources>
    <string name="app_name">SavingsGuru</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="money">Money</string>
    <string name="stats">Statistics</string>
    <string name="graphs">Graphs</string>

    //new scenario fragment
    <string name="scenario_title">Scenario Title</string>
    <string name="select_monthly_expenses">Select Monthly Expenses</string>
    <string name="specify_monthly_income">Specify Monthly Income</string>
    <string name="savings_to_invest_ratio">Savings to Investment ratio</string>
    <string name="next">Next</string>
    <string name="create">Create</string>
    <string name="entry_added">%s has been added</string>
    
    //scenario fragment
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="investment_to_savings">Investment to Savings Ratio</string>
    <string name="currency">£%s</string>
    <string name="calculate_goal">Calculate Goal</string>
    <string name="years_until_goal">Years until goal reached?</string>
    <string name="savings_goal"><u>Savings Goal</u></string>
    <string name="time_to_reach"><u>Time to Reach</u></string>
    <string name="n_a">n/a</string>
    <string name="months">months</string>
    <string name="years_and_months">%s years and %s months</string>
    
    //settings
    <string name="notify_monthly">Monthly savings notification</string>
    <string name="clear_cache">Clear application cache</string>
    <string name="clear"><u>Clear</u></string>
    <string name="cache_cleared">Cache has been cleared!</string>
    <string name="confirm_cache_removal">Are you sure you want to clear your cache?</string>
    <string name="info_cache_removal">This will remove your savings and scenarios entries.</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>

    //home fragment
    <string name="select_financial_goal">Select Financial Goal</string>
    <string name="add_scenario">Add new Scenario</string>
    <string name="remove">Remove</string>
    <string name="open">Open</string>
    <string name="select_action">Select action</string>

    //graph fragment
    <string name="initial_savings_amount">Initial Savings</string>
    <string name="add_another">Add another</string>
    <string name="confirm">Confirm</string>
    <string name="no_data_for_graph">No data available to show graph</string>
    <string name="entry_removed">Savings entry removed</string>

    //statistics fragment
    <string name="not_yet_available">Not yet available</string>

    //error messages
    <string name="error_confirm_your_entry">Confirm your entry first!</string>
    <string name="error_title_empty">Please insert your title</string>
    <string name="error_expenses_empty">Please insert your monthly expenses</string>
    <string name="error_income_empty">Please insert your monthly income</string>

    //notifications
    <string name="update_your_savings">Time to update your savings!</string>

    //hints
    <string name="hint_swipe_to_remove">Hint : You can swipe to remove an entry !</string>
</resources>