<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="spManager"
            type="com.frezzcoding.savingsguru.common.SPManager" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_settings"
            style="@style/H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_settings_notifications"
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_monthly"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@id/tv_settings_notifications"
            app:layout_constraintLeft_toRightOf="@id/tv_settings_notifications"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_settings_notifications" />

        <TextView
            android:id="@+id/tv_clear_cache"
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_notification" />

        <TextView
            android:id="@+id/btn_clear_cache"
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textColor="@color/link_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_clear_cache"
            app:layout_constraintLeft_toLeftOf="@id/switch_notification"
            app:layout_constraintRight_toRightOf="@id/switch_notification"
            app:layout_constraintTop_toTopOf="@id/tv_clear_cache" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>